--- a/wp-content/themes/understrap-child/sass/theme/partials/redux_layout_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/redux_layout_styles.scss
@@ -613,7 +613,7 @@
 
 .carousel-inner.three-up-carousel {
   @include mq("tablet-wide") {
-    display: flex;
+    // display: flex;
     min-height: 30em;
     flex: 0 auto;
   }
