--- a/wp-content/themes/understrap-child/sass/child-theme.scss
+++ b/wp-content/themes/understrap-child/sass/child-theme.scss
@@ -49,6 +49,7 @@
 @import "theme/partials/homepage_styles";
 @import "theme/partials/background_styles";
 @import "theme/partials/services_styles";
+@import"theme/partials/justification_styles";
 @import "theme/partials/style_tweaks";
 
 @import "theme/partials/display_state_styles";
