--- a/wp-content/themes/understrap-child/sass/theme/partials/_container_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_container_styles.scss
@@ -44,7 +44,10 @@
 
 	}
 
-	@include mq('desktop-hd') {}
+	@include mq('desktop-hd') {
+	    max-width: 61%;
+		width: 61%;
+	}
 
 	@include mq('desktop-uhd') {}
 
