--- a/wp-content/themes/understrap-child/sass/theme/partials/_global_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_global_styles.scss
@@ -53,7 +53,7 @@ $zindex-tooltip:                    1070 !default; */
         grid-color   : orange,
     ),
     64em: ( // 1024px
-        font-size    :7px,
+        font-size    : 9px,
         line-height  : 1.5,
         modular-scale: perfect-fifth,
         grid-color   : purple,
@@ -65,7 +65,7 @@ $zindex-tooltip:                    1070 !default; */
         grid-color   : blue,
     ),
     90em: ( // 1440px
-        font-size    : 9px,
+        font-size    : 8px,
         line-height  : 1.5,
         modular-scale: perfect-fifth,
         grid-color   : blue,
@@ -209,3 +209,12 @@ body {
 .overflow-hidden{
   overflow: hidden;
 }
+
+//*  safari / ios global fixes *//@mixin 
+
+//* prevent change of telephone color while enabling phone number
+a[href^=tel] {
+  text-decoration:inherit;
+  color: inherit;
+  } 
+  
