--- a/wp-content/themes/understrap-child/sass/theme/partials/variables/_style_assets.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/variables/_style_assets.scss
@@ -209,3 +209,27 @@ background-image: linear-gradient(90deg, transparent 50%, rgba(255,255,255,.5) 5
 background-size: 50px 50px;
 }
 
+
+/*=============================================
+=            //*box shdadows            =
+=============================================*/
+
+@mixin light-shadow{
+  -webkit-box-shadow: 12px 10px 19px -14px rgba(0,0,0,0.5);
+-moz-box-shadow: 12px 10px 19px -14px rgba(0,0,0,0.5);
+box-shadow: 12px 10px 19px -14px rgba(0,0,0,0.5);
+}
+
+
+
+/*=============================================
+=            //*buttons            =
+=============================================*/
+
+
+@mixin pill{
+@include vr($padding: .25 2);
+font-variant-caps: all-small-caps;
+letter-spacing: .15rem;
+border-radius: 25px;
+}
